# axelera-sort

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  QUICKSTART.md  README.md  example_usage.py  requirements.txt  setup.py
python_bindings/: pybindings.cpp
src/: sort.cpp  sort.h
tests/: test_python.py  test_sort.cpp
